[package]
name = "bloock-poseidon-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { package = "ff_ce", version = "0.13", features = ["derive"] }
rand = "0.4"
serde_json = "1.0"
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.16"

[dev-dependencies]
lazy_static = "1.4.0"
criterion = "0.3"

[[bench]]
name = "poseidon_hash"
harness = false
