[package]
name = "poseidon-rust"
version = "0.1.5"

edition = "2021"
description = "Poseidon hash implementation"
repository = "https://github.com/Pratap2018/poseidon-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = { package = "ff_ce", version = "0.13", features = ["derive"] }
rand = "0.4"
hex = "0.4.3"
num-bigint = "0.4.3"
num-traits = "0.2.16"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "poseidon_hash"
harness = false
